--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ryuofficial.github.io/ryu-am-preset",
+  "homepage": "https://Ryuofficial.github.io",
   "name": "preset",
   "version": "0.1.0",
   "private": true,
