--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "AM Preset",
-  "name": "MLBB Best injector 2024",
+  "name": "Alight Motion Preset",
   "icons": [
     {
       "src": "favicon.ico",
